fix blue part
was way too large on small screens

--- a/src/css/story.sass
+++ b/src/css/story.sass
@@ -91,8 +91,7 @@ strong
 
   @media(max-width: 600px)
     justify-content: center
-    align-items: flex-start
-    align-content: flex-start
+    align-content: center
 
   &.no-center
     @media(max-width: 550px)
